--- a/index.html
+++ b/index.html
@@ -1,86 +1,172 @@
 <!doctype html>
-
 <html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Quiet Fires — RTA</title>
   <style>
-    :root{
-      --bg:#080608;
-      --card:#0f0b0f;
-      --accent:#d92f6d;
-      --muted:#9a8da3;
+    :root {
+      --bg: #080608;
+      --card: #0f0b0f;
+      --gold: #D4AF37;
       font-family: 'Playfair Display', Georgia, serif;
     }
-    html,body{height:100%;margin:0;background:linear-gradient(180deg,var(--bg),#050305 85%);color:#fff}
-    .wrap{min-height:100vh;display:grid;place-items:center;padding:48px;position:relative;overflow:hidden}
-    .card{width:min(920px,94%);background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));border-radius:22px;padding:44px;display:grid;grid-template-columns:1fr 400px;gap:40px;align-items:center;box-shadow:0 16px 60px rgba(0,0,0,0.75);position:relative;z-index:2}
-    .left h1{font-size:42px;margin:0 0 12px 0;letter-spacing:-0.5px;color:var(--accent)}
-    .left p{margin:0 0 28px 0;color:var(--muted);line-height:1.7;font-size:18px;}
-    .cta{margin-top:20px}
-    .btn{background:linear-gradient(90deg,var(--accent),#ff4f85);border:none;padding:14px 28px;border-radius:14px;font-weight:600;cursor:pointer;box-shadow:0 10px 28px rgba(217,47,109,0.28);transition:transform .25s ease, box-shadow .25s ease;font-size:16px}
-    .btn:hover{transform:translateY(-2px) scale(1.02)}.visual{display:grid;place-items:center;padding:20px;background:linear-gradient(180deg, rgba(255,255,255,0.01), rgba(255,255,255,0.03));border-radius:16px;position:relative;z-index:2}
-lottie-player{display:block}
 
-.accent{position:absolute;pointer-events:none;opacity:0.15;z-index:1}
-.top-left{top:0;left:0;width:200px}
-.bottom-right{bottom:0;right:0;width:220px}
+    html, body {
+      height: 100%;
+      margin: 0;
+      background: linear-gradient(180deg, var(--bg), #050305 85%);
+      color: var(--gold);
+    }
 
-footer{margin-top:28px;color:rgba(255,255,255,0.12);font-size:12px}
+    .wrap {
+      min-height: 100vh;
+      display: grid;
+      place-items: center;
+      padding: 48px;
+      position: relative;
+      overflow: hidden;
+    }
 
-@media (max-width:900px){
-  .card{grid-template-columns:1fr;}
-  .visual lottie-player{width:260px;height:260px}
-}
+    .card {
+      width: min(900px, 94%);
+      background: linear-gradient(180deg, rgba(255, 255, 255, 0.02), rgba(255, 255, 255, 0.01));
+      border-radius: 22px;
+      padding: 36px 40px;
+      display: grid;
+      grid-template-columns: 1fr;
+      gap: 32px;
+      align-items: start;
+      box-shadow: 0 16px 60px rgba(0, 0, 0, 0.75);
+      position: relative;
+      z-index: 2;
+    }
 
+    .left h1 {
+      font-size: 42px;
+      margin: 0 0 16px 0;
+      letter-spacing: 0;
+      color: var(--gold);
+      line-height: 1.2;
+    }
+
+    .left p {
+      margin: 0 0 28px 0;
+      color: var(--gold);
+      line-height: 1.8;
+      font-size: 18px;
+    }
+
+    .cta {
+      margin-top: 20px;
+      text-align: left;
+    }
+
+    .btn {
+      background: linear-gradient(90deg, var(--gold), #ffdf80);
+      border: none;
+      padding: 14px 28px;
+      border-radius: 14px;
+      font-weight: 600;
+      cursor: pointer;
+      box-shadow: 0 10px 28px rgba(212, 175, 55, 0.28);
+      transition: transform 0.25s ease, box-shadow 0.25s ease;
+      font-size: 16px;
+      color: #050305;
+    }
+
+    .btn:hover {
+      transform: translateY(-2px) scale(1.02);
+    }
+
+    .accent {
+      position: absolute;
+      pointer-events: none;
+      opacity: 0.15;
+      z-index: 1;
+    }
+
+    .top-left { top: 0; left: 0; width: 140px; }
+    .top-right { top: 0; right: 0; width: 140px; }
+    .bottom-left { bottom: 0; left: 0; width: 160px; }
+    .bottom-right { bottom: 0; right: 0; width: 160px; }
+
+    footer {
+      margin-top: 28px;
+      color: rgba(212, 175, 55, 0.3);
+      font-size: 12px;
+      text-align: left;
+    }
+
+    @media (max-width: 900px) {
+      .card { padding: 32px 28px; }
+      .accent { width: 100px; }
+    }
   </style>
 </head>
 <body>
   <div class="wrap">
-    <!-- Ambient accents -->
+
+    <!-- Smoke and flame accents -->
     <div class="accent top-left">
       <lottie-player
-        src="https://lottie.host/92b2c3f1-77e8-4d50-9ff9-2ff82c0371c5/ytiJjP4W3d.json"
+        src="https://assets7.lottiefiles.com/packages/lf20_X1NxV2.json"
+        background="transparent"
+        speed="0.4"
+        loop
+        autoplay
+        style="width:140px;height:140px"
+      ></lottie-player>
+    </div>
+
+    <div class="accent top-right">
+      <lottie-player
+        src="https://assets7.lottiefiles.com/packages/lf20_8bVx1F.json"
         background="transparent"
         speed="0.5"
         loop
         autoplay
+        style="width:140px;height:140px"
       ></lottie-player>
     </div>
-    <div class="accent bottom-right">
+
+    <div class="accent bottom-left">
       <lottie-player
-        src="https://lottie.host/0e68a812-4206-4141-b5a7-17c58ec6f400/KJoI0JEDgP.json"
+        src="https://assets7.lottiefiles.com/packages/lf20_X1NxV2.json"
         background="transparent"
         speed="0.6"
         loop
         autoplay
+        style="width:160px;height:160px"
       ></lottie-player>
-    </div><div class="card">
-  <div class="left">
-    <h1>Read That Again</h1>
-    <p>RTA was never about noise. It was about the words that press closer in silence, the ones you don’t read once but again and again. This is where they live — not scattered, not forgotten, but waiting. Quiet fires, red letters, and the kind of pages you don’t close when the room goes dark.</p>
-    <div class="cta">
-      <button class="btn" onclick="location.href='https://ko-fi.com/readthatagain'">Step Inside</button>
     </div>
-    <footer>Quiet Fires | Read That Again</footer>
+
+    <div class="accent bottom-right">
+      <lottie-player
+        src="https://assets7.lottiefiles.com/packages/lf20_8bVx1F.json"
+        background="transparent"
+        speed="0.5"
+        loop
+        autoplay
+        style="width:160px;height:160px"
+      ></lottie-player>
+    </div>
+
+    <div class="card">
+      <div class="left">
+        <h1>Read That Again</h1>
+        <p>RTA was never about noise. It was about the words that press closer in silence. The ones you do not read once but again and again. This is where they live. Not scattered. Not forgotten. But waiting. Quiet fires. Red letters. The kind of pages you do not close when the room goes dark.</p>
+
+        <div class="cta">
+          <button class="btn" onclick="location.href='https://ko-fi.com/readthatagain'">Step Inside</button>
+        </div>
+
+        <footer>Quiet Fires | Read That Again</footer>
+      </div>
+    </div>
+
   </div>
 
-  <div class="visual">
-    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-
-    <!-- Main typewriter animation -->
-    <lottie-player id="heroTypewriter"
-      src="https://lottie.host/fc2bc51a-baf5-456f-bf27-19d1635c8031/pD8Jl3KJrY.json"
-      background="transparent"
-      speed="0.7"
-      loop
-      autoplay
-      style="width:340px;height:340px"
-    ></lottie-player>
-  </div>
-</div>
-
-  </div>
+  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 </body>
 </html>
